# peeps

./: .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  MIGRATION.md  PEEPS_TYPE_MIGRATION.md  README.md  README.md.in  TONE.md  package.json  pnpm-lock.yaml
crates/facet-typescript-repro/: Cargo.toml  README.md.in
crates/facet-typescript-repro/src/: lib.rs
crates/moire/: Cargo.toml  README.md.in
crates/moire-backtrace-poc/: Cargo.toml  README.md.in
crates/moire-backtrace-poc-router/: Cargo.toml  README.md
crates/moire-cli/: Cargo.toml  README.md
crates/moire-runtime/: Cargo.toml  README.md
crates/moire-runtime/src/: api.rs  dashboard.rs  db.rs  futures.rs  handles.rs  lib.rs
crates/moire-source-context/: Cargo.toml
crates/moire-source-context/src/: lib.rs  tests.rs
crates/moire-source-context/src/snapshots/: moire_source_context__tests__async_fn_multiline_params.compact.snap  moire_source_context__tests__async_fn_multiline_params.normal.snap  moire_source_context__tests__compact.snap  moire_source_context__tests__enclosing_fn_generic_impl.compact.snap  moire_source_context__tests__enclosing_fn_generic_impl.normal.snap  moire_source_context__tests__enclosing_fn_inside_closure.normal.snap  moire_source_context__tests__enclosing_fn_many_params.compact.snap  moire_source_context__tests__enclosing_fn_many_params.normal.snap  moire_source_context__tests__enclosing_fn_self_mut_ref.compact.snap  moire_source_context__tests__enclosing_fn_self_mut_ref.normal.snap  moire_source_context__tests__enclosing_fn_three_params.compact.snap  moire_source_context__tests__enclosing_fn_three_params.normal.snap  moire_source_context__tests__fn_decl_target.compact.snap  moire_source_context__tests__fn_decl_target.normal.snap  moire_source_context__tests__fn_decl_target_normal.snap  moire_source_context__tests__long_match_elides_body.compact.snap  moire_source_context__tests__long_match_elides_body.normal.snap  moire_source_context__tests__named_in_spawn.compact.snap  moire_source_context__tests__named_in_spawn.normal.snap  moire_source_context__tests__normal.snap  moire_source_context__tests__omits_fn_signature.compact.snap  moire_source_context__tests__omits_fn_signature.normal.snap  moire_source_context__tests__target_on_fn_keyword.compact.snap  moire_source_context__tests__target_on_fn_keyword.normal.snap
crates/moire-source-context/tests/fixtures/: async_fn_multiline_params.rs  channel_creation.rs  closing_brace_closure.rs  closing_brace_empty_fn.rs  closing_brace_method_in_impl.rs  closing_brace_multi_stmt_fn.rs  closing_brace_single_stmt_fn.rs  closure_inside_function.rs  compact_keeps_target_statement_neighbors.rs  compact_redacts_async_move_body.rs  enclosing_fn_free_function.rs  enclosing_fn_generic_impl.rs  enclosing_fn_impl_method.rs  enclosing_fn_inside_closure.rs  enclosing_fn_many_params.rs  enclosing_fn_module_and_return_type.rs  enclosing_fn_non_rust.js  enclosing_fn_self_mut_ref.rs  enclosing_fn_strips_pub_crate.rs  enclosing_fn_three_params.rs  extract_match_expression.rs  extract_multi_line_await.rs  extract_simple_statement.rs  few_statements_no_cuts.rs  fn_decl_target.rs  fn_decl_target.txt  function_with_many_statements.rs  impl_block_with_methods.rs  long_match_elides_body.rs  named_in_spawn.rs  named_in_spawn.txt  omits_fn_signature.rs  single_stmt_closure_target_inside.rs  statement_dedents_continuation.rs  strips_attributes.rs  strips_multiple_attributes.rs  target_on_await_line.rs  target_on_fn_keyword.rs  target_on_fn_signature_line.rs
crates/moire-sqlite-facet/: Cargo.toml  README.md
crates/moire-tokio/: Cargo.toml  README.md.in
crates/moire-tokio/src/: lib.rs
crates/moire-tokio/src/disabled/: custom.rs  mod.rs  rpc.rs  time.rs
crates/moire-tokio/src/enabled/: custom.rs  joinset.rs  mod.rs  process.rs  rpc.rs  task.rs  time.rs
crates/moire-trace-types/: Cargo.toml  README.md
crates/moire-trace-types/src/: lib.rs
crates/moire-types/: Cargo.toml  README.md.in
crates/moire-types/src/: api.rs  diff.rs  primitives.rs  recording.rs
crates/moire-types/src/objects/: entities.rs  events.rs
crates/moire-wasm/: Cargo.toml  README.md.in
crates/moire-wasm/src/: lib.rs
crates/moire-web/: Cargo.toml  README.md
crates/moire-web/src/: main.rs
crates/moire-web/src/api/: connections.rs  mod.rs  (+5 more)
crates/moire-wire/: Cargo.toml  README.md
crates/moire-wire/src/: lib.rs
crates/moire/src/: lib.rs
crates/peeps/: Cargo.toml
crates/peeps-backtrace-poc/: Cargo.toml
crates/peeps-backtrace-poc/src/: lib.rs
crates/peeps-dump/: Cargo.toml
crates/peeps-dump/frontend/: vite.config.ts
crates/peeps-dump/src/: debug_dashboard.html  http.rs  main.rs  server.rs
crates/peeps-examples/: Cargo.toml
crates/peeps-examples/src/: main.rs
crates/peeps-locks/: Cargo.toml
crates/peeps-locks/src/: lib.rs  registry.rs  snapshot.rs  sync_locks.rs
crates/peeps-roam/: Cargo.toml
crates/peeps-roam/src/: lib.rs
crates/peeps-runtime/: Cargo.toml
crates/peeps-runtime/src/: dashboard.rs  db.rs  futures.rs  handles.rs  lib.rs
crates/peeps-tokio/: Cargo.toml
crates/peeps-tokio/src/: lib.rs
crates/peeps-types/: Cargo.toml
crates/peeps-types/examples/: json_shape.rs
crates/peeps-types/src/: api.rs  diff.rs  edges.rs  entities.rs  lib.rs  new_model.rs  primitives.rs  scopes.rs  sources.rs
crates/peeps-wasm/: Cargo.toml
crates/peeps-wasm/src/: lib.rs
crates/peeps-web/: Cargo.toml
crates/peeps-web/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/peeps-web/src/: api.rs  correctness.rs  main.rs  projection.rs
crates/peeps/src/: collect.rs  dashboard_client.rs  debug_dashboard.html  disabled.rs  enabled.rs  fs.rs  joinset.rs  lib.rs  net.rs
examples/roam-rpc-stuck-request/: Cargo.toml
examples/roam-rpc-stuck-request/src/: main.rs
examples/roam-rust-swift-stuck-request/: Cargo.toml
examples/roam-rust-swift-stuck-request/src/: main.rs
examples/roam-rust-swift-stuck-request/swift/: Package.resolved  Package.swift
examples/rpc-cross-process/: Cargo.toml
(+472 files in other folders)
