[workspace]
resolver = "2"
members = [
  "crates/peeps",
  "crates/peeps-tokio",
  "crates/peeps-wasm",
  "crates/peeps-runtime",
  "crates/peeps-source",
  "crates/peeps-cli",
  "crates/peeps-web",
  "crates/peeps-types",
  "crates/peeps-wire",
  "crates/peeps-sqlite-facet",
  "crates/peeps-examples",
  "crates/peeps-backtrace-poc",
  "crates/peeps-backtrace-poc-router",
  "crates/peeps-backtrace-poc-leaf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/peeps"

[workspace.dependencies]
# Internal
peeps = { path = "crates/peeps" }
peeps-tokio = { path = "crates/peeps-tokio" }
peeps-wasm = { path = "crates/peeps-wasm" }
peeps-runtime = { path = "crates/peeps-runtime" }
peeps-source = { path = "crates/peeps-source" }
peeps-web = { path = "crates/peeps-web" }
peeps-types = { path = "crates/peeps-types" }
peeps-wire = { path = "crates/peeps-wire" }
peeps-sqlite-facet = { path = "crates/peeps-sqlite-facet" }

# External
backtrace = "0.3"
inventory = "0.3"
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-typescript = { git = "https://github.com/facet-rs/facet", branch = "main" }
figue = { git = "https://github.com/bearcove/figue", branch = "main" }
libc = "0.2"
parking_lot = "0.12"
roam-session = { path = "../roam/rust/roam-session" }
roam-shm = { path = "../roam/rust/roam-shm" }
ur-taking-me-with-you = { path = "../roam/rust/ur-taking-me-with-you", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
ureq = "2.12"
rust-embed = "8"
mime_guess = "2"
ulid = "1"
camino = "1.1"

[patch."https://github.com/bearcove/peeps"]
peeps = { path = "crates/peeps" }
peeps-types = { path = "crates/peeps-types" }
