[workspace]
resolver = "2"
members = [
  "crates/moire",
  "crates/moire-tokio",
  "crates/moire-wasm",
  "crates/moire-runtime",
  "crates/moire-cli",
  "crates/moire-web",
  "crates/moire-types",
  "crates/moire-trace-types",
  "crates/moire-trace-capture",
  "crates/moire-wire",
  "crates/moire-sqlite-facet",
  "crates/moire-examples",
  "crates/moire-backtrace-poc",
  "crates/moire-backtrace-poc-router",
  "crates/moire-backtrace-poc-leaf",
  "crates/facet-typescript-repro",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/moire"

[workspace.dependencies]
# Internal
moire = { path = "crates/moire" }
moire-tokio = { path = "crates/moire-tokio" }
moire-wasm = { path = "crates/moire-wasm" }
moire-runtime = { path = "crates/moire-runtime" }
moire-web = { path = "crates/moire-web" }
moire-types = { path = "crates/moire-types" }
moire-trace-types = { path = "crates/moire-trace-types" }
moire-trace-capture = { path = "crates/moire-trace-capture" }
moire-wire = { path = "crates/moire-wire" }
moire-sqlite-facet = { path = "crates/moire-sqlite-facet" }

# External
backtrace = "0.3"
ctor = "0.2"
inventory = "0.3"
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-typescript = { git = "https://github.com/facet-rs/facet", branch = "main" }
figue = { git = "https://github.com/bearcove/figue", branch = "main" }
libc = "0.2"
parking_lot = "0.12"
roam-session = { path = "../roam/rust/roam-session" }
roam-shm = { path = "../roam/rust/roam-shm" }
ur-taking-me-with-you = { path = "../roam/rust/ur-taking-me-with-you", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
ureq = "2.12"
rust-embed = "8"
mime_guess = "2"
ulid = "1"
camino = "1.1"

[patch."https://github.com/bearcove/moire"]
moire = { path = "crates/moire" }
moire-types = { path = "crates/moire-types" }
