[workspace]
resolver = "2"
members = [
  "crates/xtask",
  "crates/moire",
  "crates/moire-macros",
  "crates/moire-macros-noop",
  "crates/moire-tokio",
  "crates/moire-wasm",
  "crates/moire-runtime",
  "crates/moire-web",
  "crates/moire-source-context",
  "crates/moire-types",
  "crates/moire-trace-types",
  "crates/moire-trace-capture",
  "crates/moire-wire",
  "crates/moire-sqlite-facet",
  "crates/rusqlite-facet",
  "crates/moire-examples",
  "crates/facet-typescript-repro",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/moire"

[workspace.dependencies]
# Internal
moire = { path = "crates/moire" }
moire-macros = { path = "crates/moire-macros" }
moire-macros-noop = { path = "crates/moire-macros-noop" }
moire-tokio = { path = "crates/moire-tokio" }
moire-wasm = { path = "crates/moire-wasm" }
moire-runtime = { path = "crates/moire-runtime" }
moire-types = { path = "crates/moire-types" }
moire-source-context = { path = "crates/moire-source-context" }
moire-trace-types = { path = "crates/moire-trace-types" }
moire-trace-capture = { path = "crates/moire-trace-capture" }
moire-wire = { path = "crates/moire-wire" }
moire-sqlite-facet = { path = "crates/moire-sqlite-facet" }
rusqlite-facet = { path = "crates/rusqlite-facet" }

# External
ctor = "0.2"
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-typescript = { git = "https://github.com/facet-rs/facet", branch = "main" }
figue = { git = "https://github.com/bearcove/figue", branch = "main" }
libc = "0.2"
parking_lot = "0.12"
ur-taking-me-with-you = { path = "../roam/rust/ur-taking-me-with-you", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49", features = ["full"] }
proc-macro2 = "1"
quote = "1"
unsynn = "0.3"
axum = { version = "0.8", features = ["ws"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
ureq = "2.12"
addr2line = "0.24"
arborium = { version = "2", features = [
  "lang-rust", "lang-c", "lang-cpp", "lang-go", "lang-zig",
  "lang-javascript", "lang-typescript", "lang-tsx",
  "lang-python", "lang-ruby", "lang-java", "lang-kotlin", "lang-scala",
  "lang-bash", "lang-json", "lang-yaml", "lang-toml", "lang-xml",
  "lang-html", "lang-css", "lang-scss", "lang-markdown", "lang-sql",
  "lang-swift", "lang-elixir", "lang-haskell", "lang-ocaml", "lang-lua", "lang-php", "lang-r",
] }

[patch."https://github.com/bearcove/moire"]
moire = { path = "crates/moire" }
moire-types = { path = "crates/moire-types" }
