[package]
name = "facet-typescript-repro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-typescript.workspace = true
