[package]
name = "moire-backtrace-poc-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
moire-backtrace-poc-leaf = { path = "../moire-backtrace-poc-leaf" }
