[package]
name = "moire-backtrace-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
addr2line = "0.24"
object = "0.36"
moire-backtrace-poc-leaf = { path = "../moire-backtrace-poc-leaf" }
moire-backtrace-poc-router = { path = "../moire-backtrace-poc-router" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
