[package]
name = "moire-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "moire"
path = "src/main.rs"

[dependencies]
facet.workspace = true
facet-json.workspace = true
facet-value.workspace = true
figue.workspace = true
moire-types.workspace = true
ureq.workspace = true
