[package]
name = "moire-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
ctor.workspace = true
facet.workspace = true
facet-json.workspace = true
facet-value.workspace = true
moire-trace-capture.workspace = true
moire-trace-types.workspace = true
moire-types.workspace = true
moire-wire.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.49", default-features = false, features = ["rt", "sync", "time"] }
