[package]
name = "moire-sqlite-facet"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-json.workspace = true
facet-value.workspace = true
moire-types = { workspace = true, features = ["rusqlite"] }
rusqlite.workspace = true
