[package]
name = "moire-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
diagnostics = []

[dependencies]
ctor.workspace = true
facet-json.workspace = true
facet-value.workspace = true
moire-types.workspace = true
moire-runtime.workspace = true
moire-trace-types.workspace = true
moire-wire.workspace = true
parking_lot.workspace = true
tokio.workspace = true
