[package]
name = "moire-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
diagnostics = []

[dependencies]
ctor.workspace = true
moire-types.workspace = true
moire-runtime.workspace = true
parking_lot.workspace = true
tokio.workspace = true
