[package]
name = "moire-trace-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
rusqlite = ["dep:rusqlite"]

[dependencies]
facet.workspace = true
rusqlite = { workspace = true, optional = true }
