[package]
name = "moire-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
rusqlite = ["dep:rusqlite", "moire-trace-types/rusqlite"]

[dependencies]
facet.workspace = true
facet-format.workspace = true
facet-value.workspace = true
facet-json.workspace = true
moire-trace-types.workspace = true
rusqlite = { workspace = true, optional = true }
