[package]
name = "moire-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
axum.workspace = true
async-trait = "0.1"
facet.workspace = true
facet-json.workspace = true
facet-typescript.workspace = true
facet-value.workspace = true
figue.workspace = true
moire-sqlite-facet.workspace = true
moire-types.workspace = true
moire-trace-types.workspace = true
moire-wire.workspace = true
rusqlite.workspace = true
rusqlite-facet.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
addr2line.workspace = true
arborium.workspace = true
tower-http = { version = "0.6", features = ["fs"] }
rust-mcp-sdk = { version = "0.8", default-features = false, features = [
  "server",
  "macros",
  "hyper-server",
  "streamable-http",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
object = "0.36"
ur-taking-me-with-you.workspace = true
arborium-theme = "2"

[target.'cfg(unix)'.dependencies]
libc.workspace = true
