[package]
name = "peeps-backtrace-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
addr2line = "0.24"
backtrace.workspace = true
object = "0.36"
peeps-backtrace-poc-leaf = { path = "../peeps-backtrace-poc-leaf" }
peeps-backtrace-poc-router = { path = "../peeps-backtrace-poc-router" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
