[package]
name = "peeps-dump"
version.workspace = true
edition.workspace = true
license.workspace = true

# This will be the CLI tool / dashboard server
[[bin]]
name = "peeps"
path = "src/main.rs"

[dependencies]
axum.workspace = true
facet-json.workspace = true
mime_guess.workspace = true
peeps.workspace = true
peeps-types.workspace = true
peeps-waitgraph.workspace = true
rust-embed.workspace = true
tokio.workspace = true
