[package]
name = "peeps-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
roam = ["dep:roam", "dep:roam-stream"]

[dependencies]
facet.workspace = true
figue.workspace = true
libc.workspace = true
peeps = { workspace = true, features = ["diagnostics"] }
tokio.workspace = true
ureq.workspace = true
roam = { path = "../../../roam/rust/roam", optional = true }
roam-stream = { path = "../../../roam/rust/roam-stream", features = [
  "diagnostics",
], optional = true }
ur-taking-me-with-you.workspace = true
