[package]
name = "peeps-locks"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
diagnostics = ["peeps-tasks/diagnostics"]

[dependencies]
facet.workspace = true
parking_lot.workspace = true
peeps-tasks.workspace = true
peeps-types.workspace = true
tokio.workspace = true
