[package]
name = "peeps-roam"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
roam-session = ["dep:roam-session"]
roam-shm = ["dep:roam-shm"]

[dependencies]
facet.workspace = true
roam-session = { workspace = true, optional = true }
roam-shm = { workspace = true, optional = true }
