[package]
name = "peeps-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
facet.workspace = true
facet-json.workspace = true
facet-value.workspace = true
peeps-source.workspace = true
peeps-types.workspace = true
peeps-wire.workspace = true
peeps-sqlite-facet.workspace = true
parking_lot.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.49", default-features = false, features = ["rt", "sync", "time"] }
