[package]
name = "peeps-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
diagnostics = []

[dependencies]
facet-json.workspace = true
facet-value.workspace = true
peeps-types.workspace = true
peeps-source.workspace = true
peeps-runtime.workspace = true
peeps-wire.workspace = true
parking_lot.workspace = true
tokio.workspace = true
