[package]
name = "peeps-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
compact_str.workspace = true
facet.workspace = true
facet-format.workspace = true
facet-value.workspace = true
inventory.workspace = true
ulid.workspace = true

[dev-dependencies]
facet-json.workspace = true
