[package]
name = "peeps-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
rusqlite = ["dep:rusqlite"]

[dependencies]
facet.workspace = true
facet-format.workspace = true
facet-value.workspace = true
facet-json.workspace = true
peeps-source.workspace = true
rusqlite = { workspace = true, optional = true }
