[package]
name = "peeps-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
diagnostics = []

[dependencies]
tokio = { version = "1.49", default-features = false, features = ["rt", "sync", "time"] }
async-channel = "2"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
