[package]
name = "peeps-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
facet.workspace = true
facet-json.workspace = true
peeps-types.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
