[package]
name = "peeps-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
compact_str.workspace = true
facet.workspace = true
facet-json.workspace = true
peeps-types.workspace = true
peeps-wire.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
