[package]
name = "peeps"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
diagnostics = []

[dependencies]
compact_str.workspace = true
facet-json.workspace = true
facet-value.workspace = true
peeps-types.workspace = true
peeps-wire.workspace = true
parking_lot.workspace = true
tokio.workspace = true
