[package]
name = "peeps"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
diagnostics = ["peeps-tokio/diagnostics", "peeps-wasm/diagnostics"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
peeps-tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
peeps-wasm.workspace = true
