[package]
name = "roam-rust-swift-stuck-request"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
peeps = { path = "../../crates/peeps", features = ["diagnostics"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "time", "net", "process", "io-util"] }
roam-session = { path = "../../../roam/rust/roam-session", features = ["diagnostics"] }
roam-wire = { path = "../../../roam/rust/roam-wire" }
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main" }

[patch."https://github.com/bearcove/peeps"]
peeps = { path = "../../crates/peeps" }
peeps-types = { path = "../../crates/peeps-types" }
