[package]
name = "rpc-cross-process"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
peeps = { path = "../../crates/peeps", features = ["diagnostics"] }
tokio = { version = "1.49", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "time",
] }
